--- a/package.json
+++ b/package.json
@@ -2,10 +2,28 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "hardhat": "^2.17.0"
+    "hardhat": "^2.22.5",
+
+    "scripts": {
+  "chain": "hardhat node",
+  "compile": "hardhat compile",
+  "test": "hardhat test",
+  "deploy:local": "hardhat deploy --network localhost",
+  "deploy:arbitrumSepolia": "hardhat deploy --network arbitrumSepolia"
+
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.2",
-    "dotenv": "^16.3.1"
-  }
+    "dotenv": "^16.4.5",
+    "ethers": "^6.13.1"
+  },
+  "version": "1.0.0",
+  "description": "This project demonstrates a basic Hardhat use case. It comes with a sample contract, a test for that contract, and a script that deploys that contract.",
+  "main": "hardhat.config.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
+}
 }
